# PhotoVault

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.production  Caddyfile.selfsigned  README.md  docker-compose.yml
android/: build.gradle.kts  (+2 more)
server/: .dockerignore  Dockerfile  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements.txt  run.sh  stop.sh
server/app/: __init__.py  main.py
server/app/api/: admin.py  auth.py  backup.py  explore.py  files.py  server.py  setup.py
server/app/core/: __init__.py  config.py  database.py  logging.py  security.py  validators.py
server/app/models/: auth.py  database.py  schemas.py  storage.py
server/scripts/: backfill_analysis.py  backfill_focal_length.py  gps_coverage.py
server/tests/: __init__.py  conftest.py  test_analysis_isolation_properties.py  test_analysis_queue.py  test_analysis_service.py  test_api_admin.py  test_api_auth.py  test_api_backup.py  test_api_explore.py  test_api_setup.py  test_auth_service.py  test_background_tasks.py  test_chunk_manager.py  test_config.py  test_database.py  test_dedup_service.py  test_directory_status_buckets.py  test_effective_file_status.py  test_explore_integration.py  test_face_analyzer.py  test_face_analyzer_properties.py  test_face_inference.py  test_file_browse_service.py  test_integration.py  test_logging.py  test_main.py  test_performance.py  test_place_analyzer.py  test_place_analyzer_properties.py  test_properties.py  test_scene_analyzer.py  test_scene_analyzer_properties.py  test_security.py  test_storage_path_engine.py  test_upload_service.py
(+229 files in other folders)
