[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photovault"
version = "0.1.0"
description = "Photo backup service for NAS - server component"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "Pillow>=10.1.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "hypothesis>=6.92.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks tests as performance tests",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
